--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^9.3.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "cookies": "^0.8.0",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.6.11",
