--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^3.13.0",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "8.2.0",
@@ -17,6 +18,9 @@
     "@react-navigation/stack": "^6.2.1",
     "cookies": "^0.8.0",
     "expo": "~45.0.0",
+    "expo-image-picker": "~13.1.1",
+    "expo-location": "~14.2.2",
+    "expo-permissions": "~13.2.0",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.6.11",
     "react": "17.0.2",
@@ -28,10 +32,7 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
-    "react-navigation": "^4.4.4",
-    "expo-permissions": "~13.2.0",
-    "expo-image-picker": "~13.1.1",
-    "expo-location": "~14.2.2"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
